@@ -1,12 +1,12 @@
 ---
 - run_archival_in_progress
 - copy_interop_files_to_irods
+- update_ml_warehouse
 - archive_to_irods
 - upload_fastqcheck_to_qc_database
 - upload_illumina_analysis_to_qc_database
 - upload_auto_qc_to_qc_database
+- update_warehouse
 - run_run_archived
 - run_qc_complete
-- update_warehouse
-- update_ml_warehouse
 - archive_logs
