@@ -1,9 +1,10 @@
 ---
 - run_archival_in_progress
+- update_ml_warehouse
 - archive_to_irods
 - upload_fastqcheck_to_qc_database
 - upload_illumina_analysis_to_qc_database
 - upload_auto_qc_to_qc_database
 - run_run_archived
 - run_qc_complete
-- update_ml_warehouse
+
